prevent pinch and zoom on mobile

--- a/html/assets/css/main.css
+++ b/html/assets/css/main.css
@@ -41,6 +41,7 @@
 	body {
 		-webkit-text-size-adjust: none;
 		overflow:hidden;
+		overflow-x: hidden;
 	}
 
 	.lightbold{
